Clean out boilerplate code and add a proper app name/title

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "codesamples",
+  "name": "Real World AngularJS Recipes",
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
