--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Real World AngularJS Recipes",
+  "name": "rwar",
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
@@ -28,8 +28,10 @@
     "grunt-usemin": "~2.0.0",
     "jshint-stylish": "~0.1.3",
     "karma": "^0.12.16",
+    "karma-jasmine": "^0.1.5",
     "karma-ng-html2js-preprocessor": "^0.1.0",
     "karma-ng-scenario": "^0.1.0",
+    "karma-phantomjs-launcher": "^0.1.4",
     "load-grunt-tasks": "~0.2.0",
     "time-grunt": "~0.2.1"
   },
